<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/dangxuattaikhoannay"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_dangxuat"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sing_in"
            android:gravity="center"
            android:text="@string/dangxuat"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/txt_huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HUY"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/xanh"/>
    </LinearLayout>
</LinearLayout>