<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/cancle"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/xacthuctaikhoan"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/linearlayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/linear_background_default"
            android:padding="10dp">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="100"
                tools:ignore="Autofill,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_passwword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/linear_background_default"
            android:padding="10dp">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/matkhaucu"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="100"
                tools:ignore="Autofill,TextFields" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_xacthuc"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/sing_in"
            android:gravity="center"
            android:text="@string/xacthuc"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>